WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133319
[GTK] Adds implementation of subtle crypto digest algorithms
https://bugs.webkit.org/show_bug.cgi?id=133319
Summary
[GTK] Adds implementation of subtle crypto digest algorithms
Eduardo Lima Mitev
Reported
2014-05-27 12:16:52 PDT
[GTK] Adds implementation of subtle crypto digest algorithms
Attachments
Patch
(3.38 KB, patch)
2014-05-27 12:17 PDT
,
Eduardo Lima Mitev
no flags
Details
Formatted Diff
Diff
Patch
(3.41 KB, patch)
2014-05-28 03:35 PDT
,
Eduardo Lima Mitev
no flags
Details
Formatted Diff
Diff
Patch
(5.07 KB, patch)
2014-08-12 03:43 PDT
,
Eduardo Lima Mitev
no flags
Details
Formatted Diff
Diff
Patch
(5.40 KB, patch)
2014-08-13 03:10 PDT
,
Eduardo Lima Mitev
no flags
Details
Formatted Diff
Diff
Patch
(5.41 KB, patch)
2014-09-23 07:25 PDT
,
Eduardo Lima Mitev
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Eduardo Lima Mitev
Comment 1
2014-05-27 12:17:29 PDT
Created
attachment 232143
[details]
Patch
Eduardo Lima Mitev
Comment 2
2014-05-27 12:31:47 PDT
Adding dependency on
bug 133316
and
bug 133317
.
Eduardo Lima Mitev
Comment 3
2014-05-28 03:35:47 PDT
Created
attachment 232187
[details]
Patch
Eduardo Lima Mitev
Comment 4
2014-08-12 03:43:23 PDT
Created
attachment 236437
[details]
Patch
WebKit Commit Bot
Comment 5
2014-08-12 03:45:00 PDT
Attachment 236437
[details]
did not pass style-queue: ERROR: Source/WebCore/crypto/gtk/CryptoDigestGtk.cpp:31: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eduardo Lima Mitev
Comment 6
2014-08-12 03:47:52 PDT
(In reply to
comment #5
)
>
Attachment 236437
[details]
did not pass style-queue: > > > ERROR: Source/WebCore/crypto/gtk/CryptoDigestGtk.cpp:31: Alphabetical sorting problem. [build/include_order] [4] > Total errors found: 1 in 4 files >
This is an unavoidable positive: #include <gnutls/gnutls.h> #include <gnutls/crypto.h> Order is alphabetically wrong, but the order cannot be inverted since crypto.h needs gnutls.h included before.
Eduardo Lima Mitev
Comment 7
2014-08-13 03:10:09 PDT
Created
attachment 236509
[details]
Patch
WebKit Commit Bot
Comment 8
2014-08-13 03:11:35 PDT
Attachment 236509
[details]
did not pass style-queue: ERROR: Source/WebCore/crypto/gtk/CryptoDigestGtk.cpp:31: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Philippe Normand
Comment 9
2014-09-22 02:22:53 PDT
Comment on
attachment 236509
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=236509&action=review
> Source/WebCore/crypto/gtk/CryptoDigestGtk.cpp:53 > + gnutls_digest_algorithm_t gnutlsAlgo;
gnutlsAlgorithm please :)
Eduardo Lima Mitev
Comment 10
2014-09-23 07:25:10 PDT
Created
attachment 238538
[details]
Patch
WebKit Commit Bot
Comment 11
2014-09-23 07:28:33 PDT
Attachment 238538
[details]
did not pass style-queue: ERROR: Source/WebCore/crypto/gtk/CryptoDigestGtk.cpp:31: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 12
2014-09-23 08:17:59 PDT
Comment on
attachment 238538
[details]
Patch Clearing flags on attachment: 238538 Committed
r173872
: <
http://trac.webkit.org/changeset/173872
>
WebKit Commit Bot
Comment 13
2014-09-23 08:18:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug