[GTK] Adds implementation of Subtle Crypto digest algorithms https://bugs.webkit.org/show_bug.cgi?id=133319

Source/WebCore:

Patch by Eduardo Lima Mitev <elima@igalia.com> on 2014-09-23
Reviewed by Philippe Normand.

Tests are already in place under crypto/subtle/sha-*.html

* crypto/gtk/CryptoDigestGtk.cpp:
(WebCore::CryptoDigest::CryptoDigest):
(WebCore::CryptoDigest::~CryptoDigest):
(WebCore::CryptoDigest::create):
(WebCore::CryptoDigest::addBytes):
(WebCore::CryptoDigest::computeHash):

LayoutTests:

Leaves all crypto/subtle tests skipped and whitelist only those related to
digest algorithms (sha-*.html). When enough crypto algorithms are implemented,
we can invert the approach and blacklist only those tests whose algorithms are
not implemented.

Patch by Eduardo Lima Mitev <elima@igalia.com> on 2014-09-23
Reviewed by Philippe Normand.

* platform/gtk/TestExpectations: Unskip tests for Subtle-Crypto digest algorithms.

Canonical link: https://commits.webkit.org/154847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173872 268f45cc-cd09-0410-ab3c-d52691b4dbfc